contact info update

--- a/public/index.html
+++ b/public/index.html
@@ -585,11 +585,11 @@
                 </div>
                 <div class="col-12 col-lg-5 contact__info">
                     <h4>Phone Number</h4>
-                    <span>&#43;41 (44) 505 10 99</span>
+                    <span>&#43;44 7584 658015</span>
                     <h4>Email</h4>
-                    <span><a href="mailto:team@radity.com">team@radity.com</a></span>
-                    <h4>Address</h4>
-                    <span>Radity GmbH<br />Max-Bill-Platz 5, 8050 Zürich</span>
+                    <span><a href="mailto:poliver24@hotmail.com">Poliver24@hotmail.com</a></span>
+                    <h4>Location</h4>
+                    <span>London, UK</span>
                 </div>
             </div>
         </div>
@@ -599,41 +599,6 @@
 
 	
 	
-<section class="section section--cta">
-<div class="container">
-  <div class="row">
-    <div class="col-12 text-center">
-      <h2>Newsletter subscription</h2>
-      <div class="rad-subscription-group">
-        <form id="rad-subscription" action="">
-          <input
-            id="rad-subscription-email"
-            type="email"
-            class="form-control"
-            aria-describedby="emailHelp"
-            placeholder="Email Address..."
-            aria-label="Email Address"
-          />
-          <button type="submit" id="rad-subscription-submit" class="btn btn-light btn-rounded">
-            Sign Up
-          </button>
-        </form>
-        <div id="rad-subscription-success" class="d-none">
-          <p class="lead">Successfully subscribed</p>
-        </div>
-        <div id="rad-subscription-fail" class="d-none">
-          <p>Error while subscribing.</p>
-        </div>
-        <script src="/js/subscription.js"></script>
-      </div>
-      <small id="emailHelp" class="form-text text-muted"
-        >We&#39;ll never share your email with anyone else.</small
-      >
-    </div>
-  </div>
-</div>
-</section>
-
 
 	
 
