gif added + styling

--- a/public/index.html
+++ b/public/index.html
@@ -297,8 +297,8 @@
     <img
       class="lozad img-responsive"
       src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-      data-src="https://patchup.io/img/showcase/showcase.png"
-      data-srcset="https://patchup.io/img/showcase/showcase.png 1x, https://patchup.io/img/showcase/showcase@2x.png 2x"
+      data-src="https://patchup.io/img/showcase/PATCH.gif"
+      data-srcset="https://patchup.io/img/showcase/PATCH.gif 1x, https://patchup.io/img/showcase/PATCH@2x.gif 2x"
       alt="Showcase keyboard and mouse image"
     />
   </div>
