--- a/public/404.html
+++ b/public/404.html
@@ -224,8 +224,8 @@
       <a class="navbar-brand" href="https://patchup.io">
         <img
           class="img-responsive"
-          src="img/general/patch-logo.gif"
-          srcset="img/general/patch-logo.gif 1x, img/general/patch-logo@2x.gif 2x"
+          src="img/general/patch-logo.png"
+          srcset="img/general/patch-logo.png 1x, img/general/patch-logo@2x.png 2x"
           alt="Header Logo"
         />
       </a>
