--- a/public/index.html
+++ b/public/index.html
@@ -299,7 +299,7 @@
       src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
       data-src="https://patchup.io/img/showcase/PATCH.gif"
       data-srcset="https://patchup.io/img/showcase/PATCH.gif 1x, https://patchup.io/img/showcase/PATCH@2x.gif 2x"
-      alt="Showcase keyboard and mouse image"
+      alt="Patch Gif"
     />
   </div>
   <div class="container">
@@ -334,8 +334,8 @@
     <img
       class="lozad img-responsive"
       src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-      data-src="https://patchup.io/img/showcase/showcase-mobile.jpg"
-      alt="Showcase keyboard and mouse image"
+      data-src="https://patchup.io/img/showcase/PATCH.gif"
+      alt="Patch gif"
     />
   </div>
 </section>
